@@ -684,6 +684,7 @@ org.openjump.core.ui.plugin.layer.pirolraster.ToggleRasterImageVisibility.Toggle
 org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence = Transformovat obr\u00e1zek na ohrani\u010den\u00ed (nap\u0159. obd\u00e9ln\u00edk)
 org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image = P\u0159ibl\u00ed\u017eit na rastr
 #T:org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn = Center to click
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction = Zm\u011bnit sm\u011br
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side = Editovat vybranou stranu
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front = \u010celo
