@@ -683,6 +683,7 @@ org.openjump.core.ui.plugin.layer.pirolraster.ToggleRasterImageVisibility.Toggle
 org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence = Bild auf Umrandung anpassen
 org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image = Auf Rasterbild zoomen
 org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn = Auf Klickpunkt zentrieren
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction = Richtung \u00e4ndern
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side = Gew\u00e4hlte Seite ver\u00e4ndern
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front = Start
