@@ -684,6 +684,7 @@ org.openjump.core.ui.plugin.layer.pirolraster.ToggleRasterImageVisibility.Toggle
 org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence = Warp Image To Fence
 org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image = Zoom To Raster Image
 org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn = Center to click
+org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction = Change Direction
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side = Edit Selected Side
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front = Front
