@@ -687,6 +687,7 @@ org.openjump.core.ui.plugin.mousemenu.category.MoveCategoryToBottom.Move-Categor
 org.openjump.core.ui.plugin.mousemenu.category.MoveCategoryToTop.Move-Category-To-Top=Mover la categor\u00EDa al inicio
 org.openjump.core.ui.plugin.mousemenu.category.SetCategoryVisibilityPlugIn.Set-Category-Visibility=Establecer la visibilidad 
 org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn=Centrar mapa
+org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clonar Elemento
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.angle=\u00E1ngulo
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction=Cambiar direcci\u00F3n
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side=Editar lado seleccionado
