@@ -684,6 +684,7 @@ org.openjump.core.ui.plugin.layer.pirolraster.ToggleRasterImageVisibility.Toggle
 org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence = Varppaa kuva aitaukseen
 org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image = Kohdista rasterikuvaan
 #T:org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn = Center to click
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction = Vaihda suunta
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side = Muokkaa valittua sivua
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front = Edest\u00E4
