@@ -684,6 +684,7 @@ org.openjump.core.ui.plugin.layer.pirolraster.ToggleRasterImageVisibility.Toggle
 org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence = Ajuster l'image au cadre
 org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image = Zoomer sur l'image raster
 org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn = Centrer sur le clic
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction = Inverser le sens
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side = Afficher le segment s\u00e9lectionn\u00e9
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front = devant
