@@ -754,6 +754,7 @@ org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.with-mixed-geometry-typ
 org.openjump.core.ui.plugin.mousemenu.SelectLayersWithSelectedItemsPlugIn.SelectLayersWithSelectedItems = Kijel\u00f6lt elemekkel rendelkez\u0151 r\u00e9tegek kiv\u00e1laszt\u00e1sa
 org.openjump.core.ui.plugin.mousemenu.ZoomInPlugIn = Nagy\u00edt\u00e1s kattint\u00e1shoz
 #T:org.openjump.core.ui.plugin.mousemenu.ZoomOutPlugIn = Zoom out from Click
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.category.MoveCategoryOneDown.Move-Category-One-Down = Kateg\u00f3ria mozgat\u00e1sa eggyel lefel\u00e9
 org.openjump.core.ui.plugin.mousemenu.category.MoveCategoryOneDown.Only-a-single-category-can-be-moved\! = A kateg\u00f3ri\u00e1k csak egyes\u00e9vel mozgathat\u00f3k\!
 org.openjump.core.ui.plugin.mousemenu.category.MoveCategoryOneUp.Move-Category-One-Up = Kateg\u00f3ria mozgat\u00e1sa eggyel felfel\u00e9
