@@ -480,9 +480,9 @@ org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.new=nuovo
 org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.no-replication-because-different-attribute-schema=Duplicazione cancellata a causa di schemi differenti di attributi\!
 org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.on-ok-attributes-will-be-lost-on-cancel-items-are-not-copied=Con OK gli attributi verranno persi. Con CANCELLA gli elementi non verranno copiati.
 org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.otherwise-select-target-layer=Altrimenti seleziona il  livello destinazione\:
-org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.replicate-selected-items=Duplica elementi
-org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.replicates-selected-items-if-all-have-same-attribute-schema=Duplica elementi selezionati se tutti hanno lo stesso schema attributi.
-org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.replicate-to-new-layer=Duplica in un nuovo  livello?
+org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.replicate-selected-items=Replica elementi
+org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.replicates-selected-items-if-all-have-same-attribute-schema=Replica elementi selezionati se tutti hanno lo stesso schema attributi.
+org.openjump.core.ui.plugin.edit.ReplicateSelectedItemsPlugIn.replicate-to-new-layer=Relica in un nuovo  livello?
 org.openjump.core.ui.plugin.edit.SelectAllLayerItemsPlugIn.layer-items=elementi del livello
 org.openjump.core.ui.plugin.edit.SelectAllLayerItemsPlugIn.select-current-layer-items=Seleziona gli elementi del livello corrente
 org.openjump.core.ui.plugin.edit.SelectAllLayerItemsPlugIn.selected-items=Elementi selezionati
