@@ -754,6 +754,7 @@ org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.with-mixed-geometry-typ
 org.openjump.core.ui.plugin.mousemenu.SelectLayersWithSelectedItemsPlugIn.SelectLayersWithSelectedItems = \u9078\u629e\u30a2\u30a4\u30c6\u30e0\u3067\u30ec\u30a4\u30e4\u3092\u9078\u629e
 org.openjump.core.ui.plugin.mousemenu.ZoomInPlugIn = \u30af\u30ea\u30c3\u30af\u3057\u3066\u30ba\u30fc\u30e0
 #T:org.openjump.core.ui.plugin.mousemenu.ZoomOutPlugIn = Zoom out from Click
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.category.MoveCategoryOneDown.Move-Category-One-Down = \u30ab\u30c6\u30b4\u30ea\u3092\uff11\u3064\u4e0b\u306b\u3059\u308b
 org.openjump.core.ui.plugin.mousemenu.category.MoveCategoryOneDown.Only-a-single-category-can-be-moved\! = Only-a-single-category-can-be-moved\!
 org.openjump.core.ui.plugin.mousemenu.category.MoveCategoryOneUp.Move-Category-One-Up = \u30ab\u30c6\u30b4\u30ea\u3092\uff11\u3064\u4e0a\u306b\u3059\u308b
