@@ -684,6 +684,7 @@ org.openjump.core.ui.plugin.layer.SortCategorySavePlugIn.Save = \u0d38\u0d02\u0d
 #T:org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence = Warp Image To Fence
 #T:org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image = Zoom To Raster Image
 #T:org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn = Center to click
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 #T:org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction = Change Direction
 #T:org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side = Edit Selected Side
 #T:org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front = Front
