@@ -709,6 +709,7 @@ org.openjump.core.ui.plugin.mousemenu.MoveAlongAnglePlugIn.The-angle-in-degrees-
 org.openjump.core.ui.plugin.mousemenu.MoveAlongAnglePlugIn.The-distance-in-map-units-to-move = A dist\u00e2ncia em unidades do mapa para mover.
 org.openjump.core.ui.plugin.mousemenu.MoveAlongAnglePlugIn.Will-convert-input-value-from-feet-to-meters = VAlor de entrada ser\u00e1 convertido de p\u00e9 para metro
 org.openjump.core.ui.plugin.mousemenu.PasteItemsAtPlugIn.Paste-Items-At-Point = Colar itens ao ponto
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 #T:org.openjump.core.ui.plugin.mousemenu.ReverseOrientationPlugIn = Reverse Orientation
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Center = Centro
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Click-Point = Clique num ponto
