@@ -679,6 +679,7 @@ org.openjump.core.ui.plugin.layer.pirolraster.SaveRasterImageAsImagePlugIn.Save-
 org.openjump.core.ui.plugin.layer.pirolraster.ToggleRasterImageVisibility.Toggle-Raster-Image-Visibility = Toggle Raster Image Visibility
 org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence = Warp Image To Fence
 org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image = Zoom To Raster Image
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction = \u0ba4\u0bbf\u0b9a\u0bc8\u0baf\u0bc8 \u0bae\u0bbe\u0bb1\u0bcd\u0bb1\u0bb5\u0bc1\u0bae\u0bcd
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side = \u0ba4\u0bc7\u0bb0\u0bcd\u0ba8\u0bcd\u0ba4\u0bc6\u0b9f\u0bc1\u0ba4\u0bcd\u0ba4  \u0baa\u0b95\u0bcd\u0b95\u0ba4\u0bcd\u0ba4\u0ba4\u0bc8 \u0ba4\u0bbf\u0bb0\u0bc1\u0ba4\u0bcd\u0ba4\u0bb5\u0bc1\u0bae\u0bcd
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front = \u0bae\u0bc1\u0ba9\u0bcd\u0ba9\u0ba3\u0bbf
