@@ -684,6 +684,7 @@ org.openjump.core.ui.plugin.layer.pirolraster.RasterImageWizardPanel.miny=miny
 #T:org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence=Warp Image To Fence
 #T:org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image=Zoom To Raster Image
 #T:org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn = Center to click
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 #T:org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction=Change Direction
 #T:org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side=Edit Selected Side
 #T:org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front=Front
@@ -930,7 +931,7 @@ org.openjump.core.ui.plugin.tools.AdvancedMeasurePlugin.OptionPanelTitle=Measure
 org.openjump.core.ui.plugin.tools.AdvancedMeasureTool=Advanced measure
 org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.area-measuring=Area measuring
 org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.distance-measuring=Distance measuring
-org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.options=Options
+org.openjump.core.ui.plugin.tools.AdvancedMeasureTool.options=Options#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn = Auto Assign Attribute
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Assign-fixed-value = Assign a fixed value
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Assign-from-other-attribute = Assign from other attribute
