@@ -684,6 +684,7 @@ org.openjump.core.ui.plugin.layer.pirolraster.ToggleRasterImageVisibility.Toggle
 org.openjump.core.ui.plugin.layer.pirolraster.WarpImageToFencePlugIn.Warp-Image-To-Fence = \u7ecf\u56fe\u50cf\u9500\u8d43
 org.openjump.core.ui.plugin.layer.pirolraster.ZoomToRasterImagePlugIn.Zoom-To-Raster-Image = \u7f29\u653e\u5230\u5149\u6805\u56fe\u50cf
 #T:org.openjump.core.ui.plugin.mousemenu.CenterZoomPlugIn = Center to click
+#T:org.openjump.core.ui.plugin.mousemenu.DuplicateItemPlugIn=Clone Item
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Change-Direction = \u6539\u53d8\u65b9\u5411
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Edit-Selected-Side = \u7f16\u8f91\u6240\u9009\u4fa7
 org.openjump.core.ui.plugin.mousemenu.EditSelectedSideDialog.Front = \u524d
